Print NMT statistics on fatal errors

XMLWordPrintable

    • b06

        We have PrintNMTStatistics, a very useful switch which will cause the VM to print out the NMT statistics if the VM exits normally.

        Currently it does not work if the VM exits due to a fatal error. But especially in fatal exits due to native OOM a NMT report would be very helpful.


        Note that we already print an abridged NMT report into the hs-err file, but this is not what this item is about. This RFE is about printing summary or detailed NMT info to stdout, like it would happen for a normal VM exit with "-XX:+PrintNMTStatistics" enabled.

              Assignee:
              Thomas Stuefe
              Reporter:
              Thomas Stuefe
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: