8227031: Print NMT statistics on fatal errors

Reviewed-by: mbaesken, mdoerr